--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,8 @@ Babel==2.9.1
 certifi==2021.10.8
 charset-normalizer==2.0.12
 click==8.1.2
-colorama==0.4.4
 Flask==2.1.1
+Flask-Cors==3.0.10
 frozenlist==1.3.0
 idna==3.3
 importlib-metadata==4.11.3
@@ -19,7 +19,6 @@ multidict==6.0.2
 peewee==3.14.10
 pyaes==1.6.1
 pyasn1==0.4.8
-PyMySQL==1.0.2
 pytz==2022.1
 requests==2.27.1
 rsa==4.8
