--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ charset-normalizer==2.0.12
 click==8.1.2
 Flask==2.1.1
 Flask-Cors==3.0.10
+Flask-Ext==0.1
 frozenlist==1.3.0
 idna==3.3
 importlib-metadata==4.11.3
