--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,109 @@
-aiogram==2.19
+aiogram==2.14.1
 aiohttp==3.8.1
 aiosignal==1.2.0
+apt-clone==0.2.1
+apturl==0.5.2
 async-timeout==4.0.2
+asyncio==3.4.3
 attrs==21.4.0
 Babel==2.9.1
+beautifulsoup4==4.8.2
+blinker==1.4
+Brlapi==0.7.0
 certifi==2021.10.8
+chardet==3.0.4
 charset-normalizer==2.0.12
 click==8.1.2
+colorama==0.4.3
+command-not-found==0.3
+configobj==5.0.6
+configparser==5.2.0
+cryptography==2.8
+cupshelpers==1.0
+dbus-python==1.2.16
+defer==1.0.6
+distlib==0.3.4
+distro==1.4.0
+entrypoints==0.3
+filelock==3.6.0
 Flask==2.1.1
 Flask-Cors==3.0.10
-Flask-Ext==0.1
+Flask-HTTPAuth==4.5.0
 frozenlist==1.3.0
-idna==3.3
+grpcio==1.16.1
+httplib2==0.14.0
+idna==2.8
+ifaddr==0.1.6
+IMDbPY==6.8
 importlib-metadata==4.11.3
 itsdangerous==2.1.2
 Jinja2==3.1.1
+keyring==18.0.1
+launchpadlib==1.10.13
+lazr.restfulclient==0.14.2
+lazr.uri==1.0.3
+louis==3.12.0
+macaroonbakery==1.3.1
+Mako==1.1.0
 MarkupSafe==2.1.1
 multidict==6.0.2
+nemo-emblems==5.2.0
+netaddr==0.7.19
+netifaces==0.10.4
+oauthlib==3.1.0
+onboard==1.4.1
+packaging==20.3
+PAM==0.4.2
 peewee==3.14.10
-pyaes==1.6.1
-pyasn1==0.4.8
-pytz==2022.1
-requests==2.27.1
-rsa==4.8
-six==1.16.0
-Telethon==1.21
-TgCrypto==1.2.3
-urllib3==1.26.9
-vk-api==11.9.0
+pexpect==4.6.0
+Pillow==7.0.0
+platformdirs==2.5.1
+protobuf==3.6.1
+psutil==5.5.1
+pycairo==1.16.2
+pycrypto==2.6.1
+pycups==1.9.73
+pycurl==7.43.0.2
+PyGObject==3.36.0
+PyICU==2.4.2
+pyinotify==0.9.6
+PyJWT==1.7.1
+pymacaroons==0.13.0
+PyMySQL==1.0.2
+PyNaCl==1.3.0
+pyparsing==2.4.6
+pyparted==3.11.2
+pyRFC3339==1.1
+python-apt==2.0.0+ubuntu0.20.4.7
+python-debian===0.1.36ubuntu1
+python-magic==0.4.16
+python-xapp==2.2.1
+python-xlib==0.23
+pytz==2019.3
+pyxdg==0.26
+PyYAML==5.3.1
+reportlab==3.5.34
+requests==2.22.0
+requests-file==1.4.3
+requests-unixsocket==0.2.0
+SecretStorage==2.3.1
+setproctitle==1.1.10
+simplejson==3.16.0
+six==1.14.0
+soupsieve==1.9.5
+systemd-python==234
+tinycss2==1.0.2
+tldextract==2.2.1
+ubuntu-drivers-common==0.0.0
+ufw==0.36
+Unidecode==1.1.1
+urllib3==1.25.8
+virtualenv==20.14.1
+wadllib==1.3.3
+webencodings==0.5.1
 Werkzeug==2.1.1
+xkit==0.0.0
+xlrd==1.1.0
 yarl==1.7.2
+youtube-dl==2021.4.26
 zipp==3.8.0
