--- a/requirements.txt
+++ b/requirements.txt
@@ -7,10 +7,12 @@ async-timeout==4.0.2
 asyncio==3.4.3
 attrs==21.4.0
 Babel==2.9.1
+bcrypt==3.2.0
 beautifulsoup4==4.8.2
 blinker==1.4
 Brlapi==0.7.0
 certifi==2021.10.8
+cffi==1.15.0
 chardet==3.0.4
 charset-normalizer==2.0.12
 click==8.1.2
@@ -18,6 +20,7 @@ colorama==0.4.3
 command-not-found==0.3
 configobj==5.0.6
 configparser==5.2.0
+cryptocode==0.1
 cryptography==2.8
 cupshelpers==1.0
 dbus-python==1.2.16
@@ -29,6 +32,7 @@ filelock==3.6.0
 Flask==2.1.1
 Flask-Cors==3.0.10
 Flask-HTTPAuth==4.5.0
+Flask-JWT-Extended==4.3.1
 frozenlist==1.3.0
 grpcio==1.16.1
 httplib2==0.14.0
@@ -61,13 +65,15 @@ platformdirs==2.5.1
 protobuf==3.6.1
 psutil==5.5.1
 pycairo==1.16.2
+pycparser==2.21
 pycrypto==2.6.1
+pycryptodomex==3.14.1
 pycups==1.9.73
 pycurl==7.43.0.2
 PyGObject==3.36.0
 PyICU==2.4.2
 pyinotify==0.9.6
-PyJWT==1.7.1
+PyJWT==2.3.0
 pymacaroons==0.13.0
 PyMySQL==1.0.2
 PyNaCl==1.3.0
